--- a/domino.css
+++ b/domino.css
@@ -370,3 +370,16 @@ td, th {
 #forfeit2{
   display: none;
 }
+
+.botoesonline{
+  background-color: #55552b;
+  border: none;
+  color: white;
+  height: 50px;
+  width: 110px;
+  display: inline-block;
+  justify-content: center;
+  align-content: center;
+  font-size: 24px;
+  cursor: pointer;
+}
