--- a/domino.css
+++ b/domino.css
@@ -383,3 +383,15 @@ td, th {
   font-size: 24px;
   cursor: pointer;
 }
+
+#BoardOnline{
+  float:left;
+  background: url("https://www.xpgameplus.com/games/mahjongunlimited/inc/background6.jpg");
+  border-radius: 8px;
+  height: 720px;
+  width: 1000px;
+  margin: 20px;
+  overflow-x:auto;
+  overflow-y:hidden;
+  display: none;
+}
