--- a/domino.css
+++ b/domino.css
@@ -393,10 +393,13 @@ td, th {
   display: none;
 }
 #PlayerHand2 {
+  position: absolute;
   visibility: visible;
   text-align: center;
   font-size: 60px;
   margin-top: 1%;
+  bottom: 0%;
+  left: 20%;
   color:white;
 }
 #Board2{
